feat: unify fields in image definition